--- a/.golangci.yml
+++ b/.golangci.yml
@@ -229,14 +229,9 @@ issues:
       - revive
       text: "exported:"
 
-    # - path: _test\.go
-    #   linters:
-    #     - funlen
-
-    - path: tests/*
+    - path: _test\.go
       linters:
-        - gochecknoglobals
-        - gocritic
+        - funlen
 
   # Maximum issues count per one linter. Set to 0 to disable. Default is 50.
   max-issues-per-linter: 0
