--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,39 +1,27 @@
-name: goreleaser
+# release workflow
+name: release
 
 on:
   push:
-    # run only against tags
     tags:
-      - '*'
-
-permissions:
-  contents: write
-  # packages: write
-  # issues: write
+      - 'v*'
 
 jobs:
-  goreleaser:
+  release:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: set up golang
+        uses: actions/setup-go@v3
         with:
-          fetch-depth: 0
-      -
-        name: Fetch all tags
-        run: git fetch --force --tags
-      -
-        name: Set up Go
-        uses: actions/setup-go@v2
+          go-version: ^1.19
+          check-latest: true
+          cache: true
+      - name: build
+        uses: goreleaser/goreleaser-action@v3
         with:
-          go-version: 1.19
-      -
-        name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
           version: latest
-          args: release --rm-dist
+          args: release -f .goreleaser.yml --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
