--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,15 @@ jobs:
         with:
           version: latest
           args: release -f .goreleaser-linux.yml --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       - name: build-darwin
         uses: goreleaser/goreleaser-action@v3
         with:
           version: latest
           args: release -f .goreleaser-darwin.yml --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       - name: build-win
         uses: goreleaser/goreleaser-action@v3
         with:
