move releasers to .github folder

--- a/.github/.goreleaser-win.yml
+++ b/.github/.goreleaser-win.yml
@@ -19,8 +19,8 @@ builds:
     id: "kubic"
     dir: .
     main: .
-    hooks:
-      post: 'upx --brute {{ .Path }}'
+    # hooks:
+    #   post: 'upx --brute {{ .Path }}'
 
 archives:
   - format: tar.gz
