--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,14 +13,20 @@ builds:
       - -X main.gitVersion={{.Tag}}
       - -X main.gitHash={{.ShortCommit}}
     goos:
+      - linux
+      - darwin
       - windows
     goarch:
       - amd64
+      - arm64
+    ignore:
+      - goos: windows
+        goarch: arm64
     id: "kubic"
     dir: .
     main: .
-    # hooks:
-    #   post: 'upx --brute {{ .Path }}'
+    hooks:
+      post: 'upx --brute {{ .Path }}'
 
 archives:
   - format: tar.gz
