--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ builds:
     dir: .
     main: .
     hooks:
-      post: 'upx --brute {{ .Path }}'
+      post: 'upx --best {{ .Path }}'
 
 archives:
   - format: tar.gz
